--- a/database.yml
+++ b/database.yml
@@ -2,13 +2,13 @@
 development:
   dialect: postgres
   database: coke_development
-  user: postgres
-  password: postgres
+  user: azzi
+  password: Bu.62991881
   host: 127.0.0.1
   pool: 5
 
 test:
-  url: {{envOr "TEST_DATABASE_URL" "postgres://postgres:postgres@127.0.0.1:5432/coke_test?sslmode=disable"}}
+  url: {{envOr "TEST_DATABASE_URL" "postgres://azzi:Bu.62991881@127.0.0.1:5432/coke_test?sslmode=disable"}}
 
 production:
-  url: {{envOr "DATABASE_URL" "postgres://postgres:postgres@127.0.0.1:5432/coke_production?sslmode=disable"}}
+  url: {{envOr "DATABASE_URL" "postgres://azzi:Bu.62991881@127.0.0.1:5432/coke_production?sslmode=disable"}}
